[package]
categories = ["api-bindings", "asynchronous"]
description = "A strongly-typed asynchronous Rusty interface to the Google Geocoding API"
keywords = ["geocode", "geocoding", "google"]
license = "MIT"
name = "google_geocoding"
readme = "README.md"
repository = "https://github.com/spease/google_geocoding"
version = "0.1.1"
authors = ["Steven Pease <peasteven@gmail.com>"]

[dependencies]
failure = "0.1.2"
futures = "0.1.23"
itertools = "0.7.8"
log = "0.4.4"
nav-types = "0.3.0"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"
serde_urlencoded = "0.5.3"
tokio-core = "0.1.17"
strum = "0.10.0"
strum_macros = "0.10.0"
url = "1.7.1"
reqwest = { version = "0.8.8", features = ["unstable"] }
shrinkwraprs = "0.2.0"
